[Fix] SASS :bug: :art: fixed loc btn alignement for mobile screen

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -456,7 +456,7 @@ ul {
 
 .intro__btn-wrap {
   margin: 0px;
-  padding-left: 0px;
+  padding-left: 6px;
   padding-right: 18px;
   display: -webkit-box;
   display: -ms-flexbox;
