--- a/styles/sass/layout/_navigation.scss
+++ b/styles/sass/layout/_navigation.scss
@@ -12,7 +12,7 @@
     }
     &__btn-wrap {
         margin:0px;
-        padding-left: 0px;
+        padding-left: 6px;
         padding-right: 18px;
         display: flex;
         justify-content: space-between;
